--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
             <version>2.0.7</version>
         </dependency>
 
+        <!-- TESTS -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-test-junit5</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
